# agent-course-tests

./: .env  .gitignore  agent.ts  cargo_travel_data.csv  index.html  index.js  index.ts  locations_with_times.csv  main.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/public/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
huggingface_inference/: index.ts  package.json  tsconfig.json
lang_graph/: app.py  app_analyze_doc.py  requirements.txt
llama-index/: app.py  app_multi_agent.py  app_workflow.py  requirements.txt
llama_index/: app.py  flow.html  index.html  requirements.txt
llama_index/tools/: heygen_video.py  speechify_wave.py
smolagents/: README.md  agent.json  app.py  app_multi_agent.py  app_multi_agent_example.py  app_rag_example.py  app_visual_web_browser.py  rag-example.py  requirements.txt
smolagents/config/: push_to_hub.py  tracing.py
smolagents/multi_agent/: check_reasoning_and_plot.py
smolagents/tools/: calculate_cargo_travel_time.py  get_weather_llama_index.py  save_screenshot.py  search_item_ctrl_f.py
tools/: speechify_wave.py
